# market_data_api

./: .env  .gitignore  .pylintrc  README.md  app.py  main.py  mypy.ini  practice.ipynb  pyproject.toml  smart.py  users.db  users.db-journal  websocket_connection.py
.github/workflows/: codeql.yml  fastapi-test.yaml
app/: __init__.py
app/configs/: data_saver.yaml  websocket.yaml
app/configs/data_saver/: sqlite_saver.yaml
app/configs/socket/: smartsocket.yaml
app/configs/streaming/: kafka.yaml
app/configs/websocket_connection/: smartsocket_connection.yaml
app/data/historical_data/: README.md
app/data/nse/: listing_dates.json
app/data/smart_api/: bse_symbols.json  data_starting_dates.json  nfo_options_new.json  nse_symbols.json
app/database/: db_connection.py
app/models/: user.py
app/notification/: provider.py
app/routers/: __init__.py
app/schemas/: auth_token_scheme.py  option_model.py  option_scheme.py  stock_model.py  user_model.py
app/sockets/: async_market_data_socket.py  connect_to_websockets.py  market_data_socket.py  twisted_socket.py  websocket_client_factory.py  websocket_client_protocol.py
app/utils/: connections.py  constants.py  date_utils.py  fetch_data.py  file_utils.py  file_utls.py  headers.py  path_utils.py  startup_utils.py  type_utils.py  urls.py  validators.py
app_structure/sockets/: market_data_socket.dio
authentication/: constants.py  database.py  helper.py  main.py
backend/: .pylintrc  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/scripts/: format.sh  lint.sh  setup
body_classes/: option_chain_body.py
core/schemas/: stock_model.py
core/utils/: fetch_data.py  file_utls.py  urls.py  validators.py
data/nse/: nse_index_symbols.json  nse_stock_symbols.json
data_provider/models/: stock_model.py
data_provider/smart_api/: get_connection.py  stocks_data.py  websocket_call_backs.py
data_provider/utils/: file_utls.py
dev_utils/: file_utils.py  format.sh
docker/: bitnami_kafka.yaml  postgres_setup.yaml
fetch_data/: constants.py  get_connection.py
fetch_data/options/: constants.py  data_cleaner.py  fetch_data.py  indices.py
fetch_data/smart_api/: stocks_data.py
scripts/: setup  start_websocket.sh  stop_kafka_cluster.sh  test.sh
stocks/: constants.py  data_cleaner.py  fetch_data.py  indices.py
stocks/nse_official/: connection.py  constants.py
tests/utils/: conftest.py  test_date_utils.py  test_file_utils.py  test_init_from_cfg.py  test_validators.py
(+302 files in other folders)
