[tool.poetry]
name = "market_data_api"
version = "0.1.0"
description = "get stocks and options related information"
authors = ["munikumar <munikumar7085@gmail.com>"]
license = "N/A"
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
requests = "^2.31.0"
smartapi-python = "^1.3.5"
websocket-client = "^1.5.2"
sqlalchemy = "^2.0.15"
pyotp = "^2.9.0"
logzero = "^1.7.0"
httpx = "^0.25.0"
pytest = "^7.4.2"
dvc = {extras = ["gdrive"], version = "^3.49.0"}
platformdirs = "3.10.0"



[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.5.1"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
